<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="false">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctlLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icn_city"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/colorWhite" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:cardBackgroundColor="@color/colorBlue"
                app:cardCornerRadius="@dimen/margin_16">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_16">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvName"
                        style="@style/tvStyleBold"
                        android:layout_width="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:drawableStart="@drawable/icn_marker_black"
                        android:drawablePadding="@dimen/margin_16"
                        android:ellipsize="end"
                        android:inputType="text|textMultiLine"
                        android:maxLines="2"
                        android:textSize="@dimen/text_body"
                        app:layout_constraintEnd_toStartOf="@id/ivBookmark"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Ahmedabad, Gujarat, India" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivBookmark"
                        android:layout_width="@dimen/margin_24"
                        android:layout_height="@dimen/margin_24"
                        android:src="@drawable/bookmakr_selector"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvName">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvDate"
                            style="@style/tvStyleRegular"
                            tools:text="January 23, 4:22PM" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTempratureLike"
                            style="@style/tvStyleRegular"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/text_body"
                            tools:text="Feels like 27" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivIcon"
                            android:layout_width="@dimen/margin_48"
                            android:layout_height="@dimen/margin_48"
                            android:layout_marginTop="@dimen/margin_16"
                            tools:src="@tools:sample/avatars" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvDescription"
                            style="@style/tvStyleRegular"
                            android:gravity="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/text_body"
                            tools:text="Smoke" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTemprature"
                        style="@style/tvStyleRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="80dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ivBookmark"
                        tools:text="27" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/tvTemprature">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/tvStyleRegular"
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:text="@string/wind"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_body" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvWind"
                                style="@style/tvStyleRegular"
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_body"
                                tools:text="wind" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/tvStyleRegular"
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:text="@string/humidity"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_body" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvHumidity"
                                style="@style/tvStyleRegular"
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_body"
                                tools:text="wind" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/tvStyleRegular"
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:text="@string/sunrise"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_body" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvSunrise"
                                style="@style/tvStyleRegular"
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_body"
                                tools:text="wind" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/tvStyleRegular"
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:text="@string/sunset"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_body" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvSunset"
                                style="@style/tvStyleRegular"
                                android:layout_width="match_parent"
                                android:layout_weight="1"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_body"
                                tools:text="wind" />

                        </LinearLayout>


                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvStyleBold"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/days"
                android:textSize="@dimen/text_header_regular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/cell_city_weather_item" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>